@@ -6,7 +6,7 @@
     <parent>
         <artifactId>autores</artifactId>
         <groupId>uk.autores</groupId>
-        <version>11.0.42-beta</version>
+        <version>11.0.44-beta</version>
     </parent>
 
     <artifactId>processing</artifactId>
@@ -90,6 +90,7 @@
                     <doclint>all</doclint>
                     <failOnWarnings>true</failOnWarnings>
                     <serialwarn>true</serialwarn>
+                    <excludePackageNames>uk.autores.processing.handlers.debug</excludePackageNames>
                 </configuration>
             </plugin>
             <!-- coverage -->
@@ -190,6 +191,7 @@
                     <argLine>
                         --add-opens uk.autores.processing/uk.autores.processing=uk.autores.processing.test
                         --add-opens uk.autores.processing/uk.autores.processing.handlers=uk.autores.processing.test
+                        --add-opens uk.autores.processing/uk.autores.processing.handlers.debug=uk.autores.processing.test
                         --add-exports uk.autores.processing/uk.autores.processing=uk.autores.processing.test
                     </argLine>
                 </configuration>
